core/src/org/sbml/jsbml/text/parser/FormulaParser.java
/* Generated By:JavaCC: Do not edit this line. FormulaParser.java */
/*
 * ----------------------------------------------------------------------------
 * This file is part of JSBML. Please visit <http://sbml.org/Software/JSBML>
 * for the latest version of JSBML and more information about SBML.
 *
 * Copyright (C) 2009-2017 jointly by the following organizations:
 * 1. The University of Tuebingen, Germany
 * 2. EMBL European Bioinformatics Institute (EBML-EBI), Hinxton, UK
 * 3. The California Institute of Technology, Pasadena, CA, USA
 * 4. The University of California, San Diego, La Jolla, CA, USA
 * 5. The Babraham Institute, Cambridge, UK
 *
 * This library is free software; you can redistribute it and/or modify it
 * under the terms of the GNU Lesser General Public License as published by
 * the Free Software Foundation. A copy of the license agreement is provided
 * in the file named "LICENSE.txt" included with this software distribution
 * and also available online as <http://sbml.org/Software/JSBML/License>.
 * ----------------------------------------------------------------------------
 */
package org.sbml.jsbml.text.parser;

import java.io.IOException;
import java.util.ArrayList;
import java.util.InvalidPropertiesFormatException;
import java.util.Properties;
import org.sbml.jsbml.ASTNode;
import org.sbml.jsbml.ASTNode.Type;
import org.sbml.jsbml.resources.Resource;

/**
 * Class used to parse infix mathematical formula and returns a representation of it as an Abstract Syntax Tree (AST).
 * <p>
 * Support almost the same syntax as defined in <a href="http://sbml.org/Software/libSBML/docs/java-api/org/sbml/libsbml/libsbml.html#parseFormula(java.lang.String)">
 * the LibSBML C-inspired infix notation taken from SBML Level 1 parser</a>.
 *
 * @author Alexander D&ouml;rr
 * @author Nicolas Rodriguez
 * @since 0.8
 * @version $Rev$
 */
public class FormulaParser implements IFormulaParser, FormulaParserConstants {
  public static Properties stringToType = new Properties();

  static
  {
    String path = "cfg/ASTNodeTokens.xml";
    try
    {
      stringToType.loadFromXML(Resource.class.getResourceAsStream(path));
    }
    catch (InvalidPropertiesFormatException e)
    {
      throw new RuntimeException("Invalid configuration file entries in file " + Resource.class.getResource(path), e);
    }
    catch (IOException e)
    {
      throw new RuntimeException("Could not read configuration file " + Resource.class.getResource(path), e);
    }
  }

  private void checkSize(ArrayList < ASTNode > arguments, int i) throws ParseException
  {
    if (arguments.size() > i)
    {
      throw new ParseException();
    }
  }

  private Integer getInteger(ASTNode node)
  {
    if (node.isUMinus())
    {
      if (node.getChild(0).isInteger())
      {
        return - node.getChild(0).getInteger();
      }
      else
      {
        return null;
      }
    }
    else
    {
      if (node.isInteger())
      {
        return node.getInteger();
      }
      else
      {
        return null;
      }
    }
  }

  /**
   * Returns a piecewise {@link ASTNode} representing the modulo operation between the left and right child given.
   *
   * <p/> The formula produced for 'a % b' or modulo(a, b) is 'piecewise(floor(a/b), gt(a/b, 0), ceil(a/b))'
   *
   * @param leftChild
   * @param rightChild
   * @return a piecewise {@link ASTNode} representing the modulo operation between the left and right child given.
   * @see "http://sbml.org/Documents/FAQ#Why_can.27t_I_use_the_.3Crem.3E_operator_in_SBML_MathML.3F"
   */
  private ASTNode createModulo(ASTNode leftChild, ASTNode rightChild)
  {
    ASTNode node = new ASTNode(ASTNode.Type.FUNCTION_PIECEWISE);

    ASTNode floorNode = new ASTNode(ASTNode.Type.FUNCTION_FLOOR);
    ASTNode aDividedByB = new ASTNode(ASTNode.Type.DIVIDE);
    aDividedByB.addChild(leftChild);
    aDividedByB.addChild(rightChild);

    floorNode.addChild(aDividedByB);
    node.addChild(floorNode);

    ASTNode greaterThan = new ASTNode(ASTNode.Type.RELATIONAL_GT);
    greaterThan.addChild(aDividedByB.clone());
    greaterThan.addChild(new ASTNode(0));

    node.addChild(greaterThan);

    ASTNode ceilNode = new ASTNode(ASTNode.Type.FUNCTION_CEILING);
    ceilNode.addChild(aDividedByB.clone());

    node.addChild(ceilNode);

    return node;
  }

  final public Token string() throws ParseException {
    Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LOG:
      t = jj_consume_token(LOG);
      break;
    case STRING:
      t = jj_consume_token(STRING);
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) {
      return t;
    }}
    throw new Error("Missing return statement in function");
  }

  @Override
  final public ASTNode parse() throws ParseException {
    ASTNode node = null;
    node = Expression();
    {if (true) {
      return node;
    }}
    throw new Error("Missing return statement in function");
  }

  final private ASTNode Expression() throws ParseException {
    ASTNode value = null;
    value = TermLvl1();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 0:
      jj_consume_token(0);
      break;
    case EOL:
      jj_consume_token(EOL);
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) {
      return value;
    }}
    throw new Error("Missing return statement in function");
  }

  final private ASTNode TermLvl3() throws ParseException {
    ASTNode rightChild;
    ASTNode leftChild;
    ASTNode node = null;
    leftChild = Primary();
    label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case POWER:
        case FACTORIAL:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_1;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case POWER:
          jj_consume_token(POWER);
          rightChild = Primary();
          node = new ASTNode(Type.POWER);
          node.addChild(leftChild);
          node.addChild(rightChild);
          leftChild = node;
          break;
        case FACTORIAL:
          jj_consume_token(FACTORIAL);
          node = new ASTNode(Type.FUNCTION_FACTORIAL);
          node.addChild(leftChild);
          leftChild = node;
          break;
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    {if (true) {
      return leftChild;
    }}
    throw new Error("Missing return statement in function");
  }

  final private ASTNode TermLvl2() throws ParseException {
    ASTNode rightChild;
    ASTNode leftChild;
    ASTNode node = null;
    Token t;
    Type type = null;
    leftChild = TermLvl3();
    label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case TIMES:
        case DIVIDE:
        case MODULO:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_2;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case TIMES:
          jj_consume_token(TIMES);
          rightChild = TermLvl3();
          node = new ASTNode('*');
          node.addChild(leftChild);
          node.addChild(rightChild);
          leftChild = node;
          break;
        case DIVIDE:
          jj_consume_token(DIVIDE);
          rightChild = TermLvl3();
          Integer left, right;
          left = getInteger(leftChild);
          right = getInteger(rightChild);
          if (left != null && right != null)
          {
            node = new ASTNode(Type.RATIONAL);
            node.setValue(left, right);
            leftChild = node;
          }
          else
          {
            node = new ASTNode('/');
            node.addChild(leftChild);
            node.addChild(rightChild);
            leftChild = node;
          }
          break;
        case MODULO:
          jj_consume_token(MODULO);
          rightChild = TermLvl3();
          node = createModulo(leftChild, rightChild);
          leftChild = node;
          break;
        default:
          jj_la1[5] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    {if (true) {
      return leftChild;
    }}
    throw new Error("Missing return statement in function");
  }

  final private ASTNode TermLvl1() throws ParseException {
    ASTNode rightChild = null;
    ASTNode leftChild;
    ASTNode node = null;
    Token t;
    Type type = null;
    String s;
    leftChild = TermLvl2();
    label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PLUS:
        case MINUS:
        case COMPARISON:
        case BOOLEAN_LOGIC:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_3;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PLUS:
          jj_consume_token(PLUS);
          rightChild = TermLvl2();
          node = new ASTNode('+');
          node.addChild(leftChild);
          node.addChild(rightChild);
          leftChild = node;
          break;
        case MINUS:
          jj_consume_token(MINUS);
          rightChild = TermLvl2();
          node = new ASTNode('-');
          node.addChild(leftChild);
          node.addChild(rightChild);
          leftChild = node;
          break;
        case BOOLEAN_LOGIC:
          t = jj_consume_token(BOOLEAN_LOGIC);
          rightChild = TermLvl2();
          s = t.image;

          if (s.equalsIgnoreCase("or") || s.equals("||"))
          {
            type = ASTNode.Type.LOGICAL_OR;
          }
          else if (s.equalsIgnoreCase("and") || s.equals("&&"))
          {
            type = ASTNode.Type.LOGICAL_AND;
          }
          else if (s.equalsIgnoreCase("xor"))
          {
            type = ASTNode.Type.LOGICAL_XOR;
          }
          node = new ASTNode(type);
          node.addChild(leftChild);
          node.addChild(rightChild);
          leftChild = node;
          break;
        case COMPARISON:
          t = jj_consume_token(COMPARISON);
          rightChild = TermLvl2();
          s = t.image;
          if (s.equalsIgnoreCase("<"))
          {
            type = ASTNode.Type.RELATIONAL_LT;
          }
          else if (s.equalsIgnoreCase(">"))
          {
            type = ASTNode.Type.RELATIONAL_GT;
          }
          else if (s.equalsIgnoreCase("=="))
          {
            type = ASTNode.Type.RELATIONAL_EQ;
          }
          else if (s.equalsIgnoreCase("!="))
          {
            type = ASTNode.Type.RELATIONAL_NEQ;
          }
          else if (s.equalsIgnoreCase(">="))
          {
            type = ASTNode.Type.RELATIONAL_GEQ;
          }
          else if (s.equalsIgnoreCase("<="))
          {
            type = ASTNode.Type.RELATIONAL_LEQ;
          }
          node = new ASTNode(type);
          node.addChild(leftChild);
          node.addChild(rightChild);
          leftChild = node;
          break;
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    {if (true) {
      return leftChild;
    }}
    throw new Error("Missing return statement in function");
  }

  final private ASTNode Primary() throws ParseException, NumberFormatException {
    Token t;
    double d;
    int i;
    ASTNode node = null;
    ASTNode vector = new ASTNode();
    ASTNode child, furtherChild;
    String s;
    String vals [ ];
    ArrayList < ASTNode > arguments = new ArrayList < ASTNode > ();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER:
      t = jj_consume_token(INTEGER);
      i = Integer.parseInt(t.image);
      node = new ASTNode(Type.INTEGER);
      node.setValue(i);
      {if (true) {
      return node;
    }}
      break;
    case NUMBER:
      t = jj_consume_token(NUMBER);
      d = Double.parseDouble(t.image);
      node = new ASTNode(Type.REAL);
      node.setValue(d);
      {if (true) {
      return node;
    }}
      break;
    case EXPNUMBER:
      t = jj_consume_token(EXPNUMBER);
      s = t.image;
      vals = s.toLowerCase().split("e");
      if (vals [ 1 ].startsWith("+"))
      {
        i = Integer.parseInt(vals [ 1 ].substring(1));
      }
      else
      {
        i = Integer.parseInt(vals [ 1 ]);
      }
      node = new ASTNode(Type.REAL_E);
      node.setValue(Double.parseDouble(vals [ 0 ]), i);
      {if (true) {
      return node;
    }}
      break;
    default:
      jj_la1[12] = jj_gen;
      if (jj_2_1(2)) {
        t = string();
        jj_consume_token(OPEN_PAR);
        child = TermLvl1();
        label_4:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case SLPITTER:
              ;
              break;
            default:
              jj_la1[8] = jj_gen;
              break label_4;
            }
            jj_consume_token(SLPITTER);
            furtherChild = TermLvl1();
            arguments.add(furtherChild);
          }
        jj_consume_token(CLOSE_PAR);
        s = t.image;
        Type type = null;

        if (stringToType.containsKey(s.toLowerCase()))
        {
          type = ASTNode.Type.valueOf(stringToType.getProperty(s.toLowerCase()).toUpperCase());
        }
        if (s.equalsIgnoreCase("abs"))
        {
          type = Type.FUNCTION_ABS;
          node = new ASTNode(type);
          node.addChild(child);
        }
        else if (s.equalsIgnoreCase("factorial"))
        {
          checkSize(arguments, 1);
          type = Type.FUNCTION_FACTORIAL;
          node = new ASTNode(type);
          node.addChild(child);
        }
        else if (s.equalsIgnoreCase("eq"))
        {
          checkSize(arguments, 1);
          type = Type.VECTOR;
          node = new ASTNode(type);
          node.addChild(child);
        }
        else if (s.equalsIgnoreCase("pow"))
        {
          checkSize(arguments, 1);
          type = Type.FUNCTION_POWER;
          node = new ASTNode(type);
          node.addChild(child);
        }
        else if (s.equalsIgnoreCase("sqr"))
        {
          checkSize(arguments, 0);
          type = Type.FUNCTION_EXP;
          node = new ASTNode(type);
          node.addChild(child);
          node.addChild(new ASTNode(2));
        }
        else if (s.equalsIgnoreCase("sqrt"))
        {
          checkSize(arguments, 0);
          type = Type.FUNCTION_ROOT;
          node = new ASTNode(type);
          node.addChild(new ASTNode(2));
          node.addChild(child);
        }
        else if (s.equalsIgnoreCase("not"))
        {
          checkSize(arguments, 0);
          type = Type.LOGICAL_NOT;
          node = new ASTNode(type);
          node.addChild(child);
        }
        else if (s.equalsIgnoreCase("ln"))
        {
          checkSize(arguments, 0);
          type = Type.FUNCTION_LN;
          node = new ASTNode(type);
          node.addChild(child);
        }
        else if (s.equalsIgnoreCase("lt"))
        {
          checkSize(arguments, 0);
          type = Type.RELATIONAL_LT;
          node = new ASTNode(type);
          node.addChild(child);
        }
        else if (s.equalsIgnoreCase("lambda"))
        {
          type = Type.LAMBDA;
          node = new ASTNode(type);
          node.addChild(child);
        }
        else if (s.equalsIgnoreCase("piecewise"))
        {
          type = Type.FUNCTION_PIECEWISE;
          node = new ASTNode(type);
          node.addChild(child);
        }
        else if (s.equalsIgnoreCase("selector"))
        {
          type = Type.FUNCTION_SELECTOR;
          node = new ASTNode(type);
          node.addChild(child);
        }
        else
        {
          node = new ASTNode(Type.FUNCTION);
          node.addChild(child);
        }
